# superchick

./: .README.md.swp  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  acc16model.xacro  bladder.xacro  cudainstall.sh  dockerchicko.sh  headnball.xacro  matrix_mult.cpp  novalis.urdf.xacro  novalis.xacro  package.xml  superchick.xacro  table.xacro  whitehead.xacro
IAB/: CMakeLists.txt  CMakeLists.txt.bak  IAB-config.h.cmake  README.md  docker-compose.yml  dockerchicko.sh
IAB/FEDPlugin/: CMakeLists.txt
IAB/cmake/: macros.cmake
IAB/matlab/: single_IAB_sim.m
IAB/patient/: __init__.py  hexapod.py  leg_base.py  plugins.conf  plugins.conf.default
IAB/scenes/: imrt.scn  long_leg.scn  sphere.scn  springs.scn  table_cushion.scn  table_stand.scn
IAB/src/: IAB.cpp  IABSimple.cpp  isochoricForceField.cpp
IAB/src/IABPlugin/: CMakeLists.txt
jointpub/: CMakeLists.txt
jointpub/launch/: joints.launch
jointpub/src/: jointpub.cpp
kinematic_model/: CMakeLists.txt  package.xml
kinematic_model/src/: chick_planning.cpp  headmove.cpp  headmove.cpp.cpp  kinematic_api.cpp  kinematic_model.cpp
ros/superchicko/: CMakeLists.txt  package.xml
ros_sofa/superchick/: package.xml
ros_sofa/superchick/meshes/: bladder.stl  vicon.stl
sofa/: CMakeLists.txt  CMakeLists.txt.bak  README.md  compile  dockerchicko.sh
sofa/.ipynb_checkpoints/: YieJing-checkpoint.ipynb
sofa/ForceFields/: CMakeLists.txt  IABForcefield.cpp  IsochoricForceField.cpp  IsochoricForceField.h  IsochoricForceField.inl  integrand.h
sofa/ForceFields/include/: IsochoricForceField.inl  integrand.inl
sofa/ForceFields/src/: IsochoricForceField.cpp
sofa/IAB8/compoz/: sphere.AI  sphere.stl  sphere.vtk  table_stand.stl
sofa/IAB8/patient/: base.pyscn  head_grabber.pyscn
sofa/IAB_Sim/: CMakeLists.txt  Main.cpp
sofa/IAB_Sim/src/: IAB8.cpp  head-iab.scn  plugin_list.conf.default
sofa/docs/: gpio_rp.md
sofa/forcefields/: IABForcefield.h  IABForcefield.inl
sofa/include/: MooneyRivlin.h  debuggers.h  integrand.h
sofa/matlab/: BelcherTranslationalCalibration1.m  D6_to_leg_length_123.m  aapm20.m  aapm20.m~  aapm_all.m  aapm_rot.m  input_file_generate.m
sofa/meshes/: leg_base_long.stl  leg_base_small.stl  springs.stl
sofa/meshes/linac/: full_system.stp  truebeam.stl
sofa/patient/: plugins.conf
sofa/plugins/: plugins.conf
sofa/plugins/FEDPlugin/: README.md  initFED.cpp  initFED.h
sofa/plugins/IABPlugin/: CMakeLists.txt  IABTest.scn
sofa/plugins/IABPlugin2/: CMakeLists.txt  IABPlugin.txt
sofa/python/: MRILinac.py  MRILinac.py.qglviewer.view  README.md  SingleIAB.py  __init__.py  config.py  diff_kine_controller.py  domes.py  patient.py  pneunets.py  xml_2_scn.py
sofa/python/data_dumps/: patient_dofs.txt  patient_dofs_x.txt  patient_dofs_y.txt.bak  patient_dofs_z.txt.bak
sofa/python/examples/: SingleIAB.py  SingleIAB.py.qglviewer.view  bunny.py  bunny.py.bak  bunnycontroller.py  bunnycontroller.py.bak  pneunets.py  stl_to_vtu.py
sofa/python/kinecontrol/: __init__.py  diff_kine_controller.py  kinematic_control.py  ol_control.py  single_controller.py  single_controller.py.bak
sofa/python/notebooks/: Untitled.ipynb  test.txt  tests.ipynb
sofa/python/tests/: traj_plotter_test.py
sofa/python/utils/: __init__.py  pose_plotter.py  pose_plotter.py.bak  rotation.py  sinusoid.py  traj_generator.py  unused.py  utils.py
sofa/scenes/: dome_test.scn  dome_test.scn.qglviewer.view  imrt.scn  imrt.scn.bak  imrt.scn.qglviewer.view  imrt_half.scn  imrt_half.scn.qglviewer.view  imrt_half.scn.qglviewer.view.bak
sofa/src/: IAB.cpp  IAB.cpp.bak  Notes.md  SinggleIAB.cpp  SingleIAB.cpp  bunny.py  cable_gripper.py  deformable.cpp  domes.py  finger.vtk0.vtu  integrand.cxx  integration.h  oneParticle.cpp  pneunets.py
superchick/: .superchick.xacro.swp  CMakeLists.txt  NOTES.md  bladder.xacro  bladders  bladders.xacro  cage.xacro  headnball.xacro  jointpub.cpp  material  motionCaptureSystem.xacro  novalis  novalis.xacro  package.xml  roslaunch.launch model:=superch  superchick  superchick.gazebo  superchick.sdf  superchick.urdf  superchick.xacro  superchick1.xacro  table.xacro  vicon.xacro  vicon3.stl  whitehead.xacro
superchick/launch/: control.launch  display.launch  gazebo.launch
superchick/meshes/: bladder.stl  motionCapture.stl  superchick.mjcf  vicon.dae  vicon2.dae  vicon3.dae
superchick/models/: cage.xacro  headnball.xacro  novalis.xacro  superchick.mjcf  superchick.urdf  superchick.xacro
superchick/rviz/: urdf.rviz
superchick/src/: mujoco_viewer.cpp  test_chick.cpp
superchick/urdf/: superchick.urdf
superchick/worlds/: superchick.world
superchick_cloud/: CMakeLists.txt  clouds.tar  package.xml
superchick_cloud/clouds/: -1419753453_cloud.pcd  -1419753458_cloud.pcd  -1419753462_cloud.pcd  -1419753463_cloud.pcd  -1419753479_cloud.pcd  -1419753484_cloud.pcd  -1419753487_cloud.pcd  -1419753495_cloud.pcd  -1419753496_cloud.pcd  -1419753513_cloud.pcd  -1419753515_cloud.pcd  -1419753538_cloud.pcd  -1419753540_cloud.pcd  -1419753541_cloud.pcd  -1419753542_cloud.pcd  -1419753545_cloud.pcd  -1419753549_cloud.pcd  -1419753555_cloud.pcd  -1419753557_cloud.pcd  -1419753567_cloud.pcd  1169683058_cloud.pcd  1169683060_cloud.pcd  1169683061_cloud.pcd  1169683064_cloud.pcd  1169683072_cloud.pcd  1169683075_cloud.pcd  1169683076_cloud.pcd  1169683077_cloud.pcd  1169683079_cloud.pcd  1169683081_cloud.pcd  1169683082_cloud.pcd  1169683087_cloud.pcd  1169683096_cloud.pcd  1169683097_cloud.pcd  1169683100_cloud.pcd  1169683104_cloud.pcd  1169683106_cloud.pcd  1169683111_cloud.pcd  1169683113_cloud.pcd  1169683116_cloud.pcd  (+26 more)
superchick_cloud/src/: cloud.py  cloud_tf.py  cloud_tfer.py  superchick_cloud.cpp  superchick_cloud.py  test.py
superchick_gazebo/: CMakeLists.txt  model.config  package.xml  superchick.gazebo
superchick_gazebo/launch/: gazebo.launch  superchick.launch
superchick_gazebo/src/: superchick.sdf  superchick_gazebo.cpp
superchick_gazebo/urdf/: superchick.urdf
superchick_gazebo/worlds/: superchick.world
superchicko/: package.xml  package.xml.save
(+343 files in other folders)
