<?xml version="1.0"?>
<package>
  <name>superchick</name>
  <version>0.0.0</version>
  <description>
    The superchick metapackage
  </description>

  <maintainer email="lexilighty@gmail.com">Olalekan Ogunmolu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>vicon_bridge</run_depend>
  <run_depend>vicon_listener</run_depend>
  <run_depend>vicon_torio</run_depend>

  <export>
    <metapackage/>
  </export>
</package>