<?xml version="1.0"?>
<package>
  <name>superchick_gazebo</name>
  <version>0.0.0</version>
  <description>The superchick_gazebo package</description>

  <maintainer email="patlekano@gmail.com">lex</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>superchick</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
<!--     <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/> -->
  </export>
</package>