<?xml version="1.0"?>
<package>
  <name>superchick</name>
  <version>0.0.0</version>
  <description>The superchick package</description>
  <maintainer email="patlekano@gmail.com">lex</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>

  </export>

</package>